@@ -15,6 +15,7 @@ t/05_packlist.t
 t/06_mirror.t
 t/07_unpack.t
 t/08_supporting_sw.t
+t/09_commandline_remap.t
 t/Bar/Build.PL
 t/Bar/bin/program
 t/Bar/lib/MyBar.pm
